@@ -179,6 +179,11 @@ def u():
     return mda.Universe(PSF, DCD)
 
 
+@pytest.fixture(scope='module')
+def u_xtc():
+    return mda.Universe(TPR, XTC)  # dt = 100
+
+
 FRAMES_ERR = 'AnalysisBase.frames is incorrect'
 TIMES_ERR = 'AnalysisBase.times is incorrect'
 
@@ -205,9 +210,8 @@ def test_start_stop_step(u, run_kwargs, frames):
     ({'frames': [True, True, False, True, False, True, True, False, True,
                  False]}, (0, 1, 3, 5, 6, 8)),
 ])
-def test_frame_slice(run_kwargs, frames):
-    u = mda.Universe(TPR, XTC)  # dt = 100
-    an = FrameAnalysis(u.trajectory).run(**run_kwargs)
+def test_frame_slice(u_xtc, run_kwargs, frames):
+    an = FrameAnalysis(u_xtc.trajectory).run(**run_kwargs)
     assert an.n_frames == len(frames)
     assert_equal(an.found_frames, frames)
     assert_equal(an.frames, frames, err_msg=FRAMES_ERR)
@@ -229,24 +233,21 @@ def test_frame_fail(u, run_kwargs):
         an.run(**run_kwargs)
 
 
-def test_frame_bool_fail():
-    u = mda.Universe(TPR, XTC)  # dt = 100
-    an = FrameAnalysis(u.trajectory)
+def test_frame_bool_fail(u_xtc):
+    an = FrameAnalysis(u_xtc.trajectory)
     frames = [True, True, False]
     msg = 'boolean index did not match indexed array along (axis|dimension) 0'
     with pytest.raises(IndexError, match=msg):
         an.run(frames=frames)
 
 
-def test_rewind():
-    u = mda.Universe(TPR, XTC)  # dt = 100
-    an = FrameAnalysis(u.trajectory).run(frames=[0, 2, 3, 5, 9])
-    assert_equal(u.trajectory.ts.frame, 0)
+def test_rewind(u_xtc):
+    FrameAnalysis(u_xtc.trajectory).run(frames=[0, 2, 3, 5, 9])
+    assert_equal(u_xtc.trajectory.ts.frame, 0)
 
 
-def test_frames_times():
-    u = mda.Universe(TPR, XTC)  # dt = 100
-    an = FrameAnalysis(u.trajectory).run(start=1, stop=8, step=2)
+def test_frames_times(u_xtc):
+    an = FrameAnalysis(u_xtc.trajectory).run(start=1, stop=8, step=2)
     frames = np.array([1, 3, 5, 7])
     assert an.n_frames == len(frames)
     assert_equal(an.found_frames, frames)
@@ -260,23 +261,24 @@ def test_verbose(u):
 
 
 def test_verbose_progressbar(u, capsys):
-    an = FrameAnalysis(u.trajectory).run()
-    out, err = capsys.readouterr()
+    FrameAnalysis(u.trajectory).run()
+    _, err = capsys.readouterr()
     expected = ''
     actual = err.strip().split('\r')[-1]
     assert actual == expected
 
 
 def test_verbose_progressbar_run(u, capsys):
-    an = FrameAnalysis(u.trajectory).run(verbose=True)
-    out, err = capsys.readouterr()
+    FrameAnalysis(u.trajectory).run(verbose=True)
+    _, err = capsys.readouterr()
     expected = u'100%|██████████| 98/98 [00:00<00:00, 8799.49it/s]'
     actual = err.strip().split('\r')[-1]
     assert actual[:24] == expected[:24]
 
 def test_verbose_progressbar_run_with_kwargs(u, capsys):
-    an = FrameAnalysis(u.trajectory).run(verbose=True, progressbar_kwargs={'desc':'custom'})
-    out, err = capsys.readouterr()
+    FrameAnalysis(u.trajectory).run(
+        verbose=True, progressbar_kwargs={'desc': 'custom'})
+    _, err = capsys.readouterr()
     expected = u'custom: 100%|██████████| 98/98 [00:00<00:00, 8799.49it/s]'
     actual = err.strip().split('\r')[-1]
     assert actual[:30] == expected[:30]
